Semi-fixed the content jump on scroll. (it works in full screen)

--- a/css/app.css
+++ b/css/app.css
@@ -261,7 +261,7 @@ select {
 .sticky + .content {
     padding-top: 102px;
 }
-.mainIndex{
-    
+.contentIndex{
+    padding-top: 200px;
     
 }
